# wordle-copy

./: .gitignore  README.md  app.py  etl.py  pyproject.toml  requirements.txt  test_db_connection.py  test_word_game  word_game
controller/: GuessController.py
data/: __init__.py  word_list.txt
etl/: guess.py  user.py  word.py
instance/: c:$TEST_DATABASE_NAME.db
resources/: GuessesTable.py  Tables.py  UsersTable.py  WordsTable.py
resources/SQL/Guesses/: AddGuess.sql  CreateGuessesTable.sql
resources/SQL/Users/: AddUser.sql  CreateUsersTable.sql  UpdateUser.sql
resources/SQL/Words/: AddWord.sql  CreateWordsTable.sql  GetWord.sql
src/: GuessService.py  UserService.py  WordService.py  __init__.py
src/controller/: guessController.py  homeController.py  userController.py  wordController.py
src/model/: __init__.py  db_app.py  guessModel.py  userModel.py  wordModel.py
src/scheduled/: selectWord.py
src/schema/: guessSchema.py
src/service/: guessService.py  userService.py  wordService.py
src/utils/: exceptions.py  validations.py
templates/: add_word.html  guess.html  guesser.html  login.html  signup.html
test/controller/: guessControllerTest.py
test/service/: guessServiceTest.py  wordServiceTest.py
test/test_data/: test_word_list.txt
tests/controller/: guessControllerTest.py
tests/fixtures/: __init__.py  guesses.json  load_fixture_data.py  users.json  words.json
tests/service/: guessServiceTest.py  userServiceTest.py  wordServiceTest.py
tests/utils/: validationsTest.py
