[tool.poetry]
name = "wordle-copy"
version = "0.1.0"
description = "A copy of the popular game wordle!"
authors = ["Isaac.Frewin <isaac.frewin@virginmediao2.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cockroachdb="0.3.5"
flask="3.0.0"
flask-sqlalchemy="3.1.1"
freezegun="1.2.2"
itsdangerous="2.1.2"
marshmallow="3.20.1"
psycopg2-binary="2.9.9"
SQLAlchemy="2.0.23"
sqlalchemy-cockroachdb="2.0.1"
typing-extensions="4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
